re PR fortran/31609 (module that calls a contained function with an ENTRY point)

2007-07-28  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/31609
	* resolve.c (generic_sym): Check for a same symbol and if so, return to
	avoid infinite recursion.

From-SVN: r127026